[package]
name = "bpfquery"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlparser = {version= "0.50.0", features = ["serde", "visitor"]}
sqlparser_derive = "0.2.2"
rustyline = "14.0.0"
openssh = "0.11.0"
tokio = { version = "1", features = ["full"] }
home = "0.5.9"
crossterm = "0.28.1"
tabled = "0.16.0"
serde_json = "1.0.125"
