[package]
name = "bpfquery"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlparser = {version= "0.50.0", features = ["serde", "visitor"]}
sqlparser_derive = "0.2.2"
openssh = "0.11.0"
tokio = { version = "1", features = ["full"] }
home = "0.5.9"
serde_json = "1.0.125"
ratatui = "0.28.0"
tui-textarea = "0.6.1"
crossterm = "0.28.1"
sqlformat = "0.2.4"
clap = { version = "4.5.16", features = ["derive"] }
rusqlite = "0.32.1"
notify = "6.1.1"
