[package]
name = "bpfquery"
version = "0.1.0"
edition = "2021"

[dependencies]
rustyline = "14.0.0"
sqlparser = {version= "0.50.0", features = ["serde", "visitor"]}
sqlparser_derive = "0.2.2"
openssh = "0.11.0"
tokio = { version = "1.29", features = ["full", "rt"] }
home = "0.5.9"
serde_json = "1.0.125"
clap = { version = "4.5.16", features = ["derive"] }
rusqlite = {version = "0.32.1" , features = ["bundled"]}
warp = "0.3.7"
tokio-stream = "0.1.15"
futures-util = "0.3.30"
pretty_env_logger = "0.5.0"
serde = "1.0.209"
dotenv = "0.15.0"
whoami = "1.5.1"
datafusion = "41.0.0"
async-trait = "0.1.82"
futures = "0.3.30"
flamegraph = "0.6.5"

[profile.release]
debug = true
